--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@
 ## => Site Settings
 ##############################
 text_color_theme: chocolate # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url: # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
 title: Max's blog
@@ -37,7 +38,7 @@ author:
   email: cd84413336@gmail.com # your Email address e.g. someone@site.com
   facebook: # your Facebook username
   twitter: # your Twitter username
-  github: # your GitHub username
+  github: Maxioo # your GitHub username
   linkedin: # your Linkedin username
   googleplus: # your Google+ username
   weibo: # your Weibo username
